@@ -1,3 +1,7 @@
+Mon Feb 26 18:08:57 1996  Sam Hartman  <hartmans@tertius.mit.edu>
+
+	* k5mech.c : do not declare kg_context static as it is declared in another file, and declared extern in a header.
+
 Sat Feb 24 00:06:37 1996  Theodore Y. Ts'o  <tytso@dcl>
 
 	* k5mech.c (krb5_gss_initialize): No longer need to call
